.deploy/cicd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cicd
  name: cicd
  namespace: cicd
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: cicd
  template:
    metadata:
      labels:
        app: cicd
    spec:
      containers:
        - command:
            - cicd
          image: ghcr.io/kj800x/cicd:commit-$SHA
          name: cicd
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: cicd-data
          workingDir: /usr/src/cicd
      imagePullSecrets:
        - name: ghcr-kj800x
      serviceAccountName: cicd-operator
      volumes:
        - name: cicd-data
          nfs:
            path: /data/services/cicd
            server: 10.60.1.15
      nodeSelector:
        dedicated: nas
