.deploy/cicd/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: cicd
  name: cicd
  namespace: cicd
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: cicd
  type: LoadBalancer
